--- a/app/santa-tracker/build.gradle
+++ b/app/santa-tracker/build.gradle
@@ -57,6 +57,9 @@ android {
             proguardFile 'proguard.txt'
         }
     }
+    lintOptions {
+        disable 'NewApi'
+    }
 }
 
 repositories {
