--- a/app/village/build.gradle
+++ b/app/village/build.gradle
@@ -24,6 +24,9 @@ android {
         minSdkVersion 15
         targetSdkVersion 21
     }
+    lintOptions {
+        disable 'NewApi'
+    }
 }
 
 repositories {
