Updating to Gradle Plugin 1.5.0.

--- a/app/santa-tracker/build.gradle
+++ b/app/santa-tracker/build.gradle
@@ -48,7 +48,7 @@ android {
         }
     }
     lintOptions {
-        disable 'NewApi'
+        disable 'NewApi', 'MissingTranslation', 'ExtraTranslation'
     }
 }
 
