--- a/app/village/build.gradle
+++ b/app/village/build.gradle
@@ -17,15 +17,15 @@
 apply plugin: 'com.android.library'
 
 android {
-    compileSdkVersion 21
+    compileSdkVersion 23
     buildToolsVersion toolsVersion
 
     defaultConfig {
         minSdkVersion 15
-        targetSdkVersion 21
+        targetSdkVersion 23
     }
     lintOptions {
-        disable 'NewApi'
+        disable 'NewApi', 'ResourceType'
     }
 }
 
